# ai-api-playbook

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
book/: CITATION.bib  LICENSE.md  README.md
docs/: 404.html  architecture.md  book-map.md  index.html  provider-matrix.md  robots.txt  site.webmanifest  sitemap.xml  zenodo-release.md
examples/01_text/: anthropic_messages.py  gemini_interactions.py  microsoft_foundry.py  openai_responses.py
examples/02_tools/: function_calling.py  mcp_tool_contract.json
examples/03_rag/: local_rag.py
examples/04_documents/: mistral_ocr.py
examples/05_media/: deepgram_stt.py  elevenlabs_tts.py  openai_image_generation.py  realtime_browser.ts  runway_video.py
examples/06_gateways/: huggingface_router.py  replicate_model.py
examples/07_search/: cohere_rerank.py  pinecone_vector_store.py
notebooks/: 00_quickstart_colab.ipynb
projects/: README.md  __init__.py  blueprints.py  common.py
projects/publishing_engine/: README.md  __init__.py  pipeline.py
src/ai_api_playbook/: __init__.py  cli.py  client.py  config.py  economics.py  errors.py  evaluation.py  models.py  providers.py  rag.py  retry.py  routing.py  safety.py
tests/: test_core.py
tools/: build_prompt_manuscript.py
